# PulseBoard

./: .env.example  .gitignore  README.md  cli.py  com.pulseboard.heartbeat.plist  config.py  dashboard.py  demo_data.py  install_heartbeat.sh  llm.py  main.py  models.py  pyproject.toml  repo_contents.md  scheduler.py
heartbeat/: __init__.py  classifier.py  collector.py  digest.py
integrations/: __init__.py  github.py  notion.py  slack.py  youtube.py
rag/: __init__.py  evaluate.py  ingest.py  query.py  store.py
routes/: __init__.py  heartbeat.py  query.py  rag.py
static/: index.html
